# secure-messenger

./: .gitignore  README.md
build-scripts/: gen_proto.ps1  gen_proto.sh  install_client.ps1  install_client.sh
client-qt/: CMakeLists.txt
client-qt/qml/: Main.qml
client-qt/src/: AppController.cpp  AppController.h  main.cpp
proto/: auth.proto  common.proto  directory.proto  messaging.proto
server/: go.mod  go.sum
server/cmd/server/: main.go
server/internal/auth/: http.go  service.go  tokens.go  tokens_test.go
server/internal/config/: config.go
server/internal/directory/: service.go
server/internal/identity/: manager.go  manager_test.go  peer.go  seed.go
server/internal/logging/: logging.go  logging_test.go
server/internal/messaging/: crypto.go  http.go  seed.go  service.go  store.go
server/internal/mtls/: mtls.go  mtls_test.go
server/internal/storage/: path.go  path_test.go
